# autoschematic-connector-template

./: Cargo.toml  README.md  autoschematic.ron
src/: connector.rs  main.rs
