[package]
name = "autoschematic-connector-template"
version = "0.14.0"
edition = "2024"


[dependencies]
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
anyhow = "1.0.95"
async-trait = "0.1.86"
autoschematic-core = { path = "../../autoschematic/autoschematic-core", version = "0.14.0" }
# autoschematic-core = { version = "0.14.0" }
ron = { version = "0.12.0", features = ["indexmap"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
serde_json = "1.0.138"
similar = { version = "2.7.0", features = ["unicode"] }
uuid = { version = "1.15.1", features = ["v4"] }
lazy_static = "1.5.0"
serde_yaml = "0.9.34"
walkdir = "2.5.0"
indexmap = { version = "2.9.0", features = ["serde"] }
